fix missing colors

--- a/abstracts/_variables-colors.scss
+++ b/abstracts/_variables-colors.scss
@@ -12,6 +12,9 @@ $slate-9: #0f172a;
 $light-background: $slate-2;
 $dark-background: $slate-7;
 
+$white: white;
+$black: black;
+
 $red: #ef4444;
 $red-variant: #b91c1c;
 
